{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 97,
  "lineage": "ded7e280-e2c9-420e-8f22-8bb62a68a42d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "aws_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_priv1_ngw1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d0944656a2a6cad",
            "domain": "vpc",
            "id": "eipalloc-05d0944656a2a6cad",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-94-136-242.compute-1.amazonaws.com",
            "public_ip": "3.94.136.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": "prd_vpc_vpc1_priv2_ngw1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005deda42fc826614",
            "domain": "vpc",
            "id": "eipalloc-005deda42fc826614",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-205-70-215.compute-1.amazonaws.com",
            "public_ip": "54.205.70.215",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_pub1_igw1",
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "igw-07d2b68b0ab136f5d",
            "tags": {
              "Name": "prd_vpc_vpc1_pub1_igw1"
            },
            "tags_all": {
              "Name": "prd_vpc_vpc1_pub1_igw1"
            },
            "vpc_id": "vpc-0289dcba4189bb3fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_pub2_igw1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074712860135:internet-gateway/igw-06de2f5ce30137390",
            "id": "igw-06de2f5ce30137390",
            "owner_id": "074712860135",
            "tags": {
              "Name": "prd_vpc_vpc1_pub2_igw1"
            },
            "tags_all": {
              "Name": "prd_vpc_vpc1_pub2_igw1"
            },
            "vpc_id": "vpc-0289dcba4189bb3fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "aws_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fis-target-group",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:074712860135:targetgroup/fis-target-group/d7944c890dac4d14",
            "arn_suffix": "targetgroup/fis-target-group/d7944c890dac4d14",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:074712860135:targetgroup/fis-target-group/d7944c890dac4d14",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "fis-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0289dcba4189bb3fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aws_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_priv1_ngw1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d0944656a2a6cad",
            "connectivity_type": "public",
            "id": "nat-08b41b731f3d72ed1",
            "network_interface_id": "eni-0c6886658efefd35d",
            "private_ip": "10.0.3.32",
            "public_ip": "3.94.136.242",
            "subnet_id": "subnet-0023a19f99308fa19",
            "tags": {
              "Name": "prd_vpc_vpc1_priv1"
            },
            "tags_all": {
              "Name": "prd_vpc_vpc1_priv1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.aws_nat_gateway",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_priv2_ngw1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005deda42fc826614",
            "connectivity_type": "public",
            "id": "nat-04e7cdd08639aa026",
            "network_interface_id": "eni-0ada543a81dcd7459",
            "private_ip": "10.0.4.146",
            "public_ip": "54.205.70.215",
            "subnet_id": "subnet-05ad28a4e1fdf38b9",
            "tags": {
              "Name": "prd_vpc_vpc1_priv2"
            },
            "tags_all": {
              "Name": "prd_vpc_vpc1_priv2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.aws_nat_gateway",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_priv1_ngw1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02c6ecbd1112bc4a21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08b41b731f3d72ed1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02c6ecbd1112bc4a2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.aws_nat_gateway",
            "module.vpc.aws_nat_gateway.aws_nat_gateway",
            "module.vpc.aws_route_table.nat_gateway",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_priv2_ngw1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b9deb9d25fab00dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04e7cdd08639aa026",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b9deb9d25fab00dd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.aws_nat_gateway",
            "module.vpc.aws_nat_gateway.aws_nat_gateway",
            "module.vpc.aws_route_table.nat_gateway",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_pub1_igw1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074712860135:route-table/rtb-0864db9bdeee48a14",
            "id": "rtb-0864db9bdeee48a14",
            "owner_id": "074712860135",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_prd_vpc_vpc1_pub1_igw1"
            },
            "tags_all": {
              "Name": "rt_prd_vpc_vpc1_pub1_igw1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0289dcba4189bb3fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_pub2_igw1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074712860135:route-table/rtb-08e587960b48a9e16",
            "id": "rtb-08e587960b48a9e16",
            "owner_id": "074712860135",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_prd_vpc_vpc1_pub2_igw1"
            },
            "tags_all": {
              "Name": "rt_prd_vpc_vpc1_pub2_igw1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0289dcba4189bb3fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_priv1_ngw1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074712860135:route-table/rtb-02c6ecbd1112bc4a2",
            "id": "rtb-02c6ecbd1112bc4a2",
            "owner_id": "074712860135",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_prd_vpc_vpc1_priv1_ngw1"
            },
            "tags_all": {
              "Name": "rt_prd_vpc_vpc1_priv1_ngw1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0289dcba4189bb3fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_priv2_ngw1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074712860135:route-table/rtb-0b9deb9d25fab00dd",
            "id": "rtb-0b9deb9d25fab00dd",
            "owner_id": "074712860135",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_prd_vpc_vpc1_priv2_ngw1"
            },
            "tags_all": {
              "Name": "rt_prd_vpc_vpc1_priv2_ngw1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0289dcba4189bb3fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_priv1_ngw1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd95f76bac79d16d",
            "route_table_id": "rtb-02c6ecbd1112bc4a2",
            "subnet_id": "subnet-0023a19f99308fa19"
          },
          "dependencies": [
            "module.vpc.aws_route_table.nat_gateway",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_priv2_ngw1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ee388fe860aad33",
            "route_table_id": "rtb-0b9deb9d25fab00dd",
            "subnet_id": "subnet-05ad28a4e1fdf38b9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.nat_gateway",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_pub1_igw1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c0012fa67050ae6",
            "route_table_id": "rtb-0864db9bdeee48a14",
            "subnet_id": "subnet-041e356221ae36ccd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.internet_gateway",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_pub2_igw1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e00437ed317cb953",
            "route_table_id": "rtb-08e587960b48a9e16",
            "subnet_id": "subnet-0e60dc9f7d44b4e29"
          },
          "dependencies": [
            "module.vpc.aws_route_table.internet_gateway",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2_sg",
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Allow from Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04425978d5df6548e",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.204.211.165/32"
                ],
                "description": "My IP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "From Subnet vpc1_pub1",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "aws_security_group.aws_security_group.lb_sg.id"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2_sg",
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": null,
            "timeouts": null,
            "vpc_id": "vpc-0289dcba4189bb3fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "lb_sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074712860135:security-group/sg-01c2ca779370256da",
            "description": "Allow from My IP and Public Subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c2ca779370256da",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.204.211.165/32"
                ],
                "description": "My IP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lb_sg",
            "name_prefix": "",
            "owner_id": "074712860135",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0289dcba4189bb3fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_priv1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074712860135:subnet/subnet-0023a19f99308fa19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0023a19f99308fa19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074712860135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_vpc_vpc1_priv1"
            },
            "tags_all": {
              "Name": "prd_vpc_vpc1_priv1"
            },
            "vpc_id": "vpc-0289dcba4189bb3fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_priv2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074712860135:subnet/subnet-05ad28a4e1fdf38b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ad28a4e1fdf38b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074712860135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_vpc_vpc1_priv2"
            },
            "tags_all": {
              "Name": "prd_vpc_vpc1_priv2"
            },
            "vpc_id": "vpc-0289dcba4189bb3fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_pub1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074712860135:subnet/subnet-041e356221ae36ccd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041e356221ae36ccd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074712860135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_vpc_vpc1_pub1"
            },
            "tags_all": {
              "Name": "prd_vpc_vpc1_pub1"
            },
            "vpc_id": "vpc-0289dcba4189bb3fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_pub2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074712860135:subnet/subnet-0e60dc9f7d44b4e29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e60dc9f7d44b4e29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "074712860135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_vpc_vpc1_pub2"
            },
            "tags_all": {
              "Name": "prd_vpc_vpc1_pub2"
            },
            "vpc_id": "vpc-0289dcba4189bb3fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:074712860135:vpc/vpc-0289dcba4189bb3fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0457abd63878a0394",
            "default_route_table_id": "rtb-069a28713f81d2877",
            "default_security_group_id": "sg-0150acc2b9ac8ffb0",
            "dhcp_options_id": "dopt-0a7cc2dc39f175c3e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0289dcba4189bb3fd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069a28713f81d2877",
            "owner_id": "074712860135",
            "tags": {
              "Name": "prd_vpc",
              "env": "prd",
              "purpose": "prd_demo"
            },
            "tags_all": {
              "Name": "prd_vpc",
              "env": "prd",
              "purpose": "prd_demo"
            }
          }
        }
      ]
    }
  ]
}